Changed className to class in the results template so it actually works properly. Updated/added css and js files for the latest bootstrap. Modified how we're pushing files to the user, we now check for css and js at the start of the file then serve up whatever is asked for. This could potentially serve an empty file if we don't have what they want. Removed the timed event template and modified the other results template to deal with a time based event. Fixed an issue where DNF were sorted improperly. Fixed an issue where early start and unofficial results were not marked.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -130,12 +130,42 @@
                             </StackPanel>
                         </Grid>
                         <DockPanel Name="IPContainer" Visibility="Collapsed" HorizontalAlignment="Center" Margin="0,10,0,0">
-                            <TextBlock Text="IP:" Width="75" VerticalAlignment="Center" TextAlignment="Right"/>
-                            <TextBlock Name="IPAdd" Width="150" Text="IP" VerticalAlignment="Center" TextAlignment="Left"/>
+                            <TextBlock
+                                Text="IP:"
+                                Width="75"
+                                VerticalAlignment="Center"
+                                TextAlignment="Right" 
+                                Margin="5,0"
+                                FontSize="16"
+                                />
+                            <TextBlock 
+                                Name="IPAdd"
+                                Width="150" 
+                                Text="IP" 
+                                VerticalAlignment="Center"
+                                TextAlignment="Left" 
+                                Margin="5,0"
+                                FontSize="16"
+                                />
                         </DockPanel>
                         <DockPanel Name="PortContainer" Visibility="Collapsed" HorizontalAlignment="Center">
-                            <TextBlock Text="Port:" Width="75" VerticalAlignment="Center" TextAlignment="Right"/>
-                            <TextBlock Name="Port" Width="150" Text="Port" VerticalAlignment="Center" TextAlignment="Left"/>
+                            <TextBlock
+                                Text="Port:"
+                                Width="75"
+                                VerticalAlignment="Center"
+                                TextAlignment="Right"
+                                Margin="5,0"
+                                FontSize="16"
+                                />
+                            <TextBlock
+                                Name="Port"
+                                Width="150" 
+                                Text="Port"
+                                VerticalAlignment="Center" 
+                                TextAlignment="Left" 
+                                Margin="5,0"
+                                FontSize="16"
+                                />
                         </DockPanel>
                     </StackPanel>
                 </Expander>
