--- a/ChronoKeep/IO/HtmlTemplates/HtmlResultsTemplate.tt
+++ b/ChronoKeep/IO/HtmlTemplates/HtmlResultsTemplate.tt
@@ -7,88 +7,128 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<link rel='stylesheet' href='bootstrap.css'>
-		<link rel='stylesheet' href='style.css'>
+		<link rel='stylesheet' href='css/bootstrap.min.css'>
+		<link rel='stylesheet' href='css/style.min.css'>
 		<title><#= theEvent.Name #> Results</title>
 	</head>
 	<body>
 		<div>
-            <div className="row container-lg lg-max-width mx-auto d-flex mt-4 mb-3 align-items-stretch">
-                <div className="col-md-10 flex-fill text-center mx-auto m-1">
-                    <p className="text-important mb-2 mt-1 h1"><#= theEvent.YearCode #> <#= theEvent.Name #></p>
+            <div class="row container-lg lg-max-width mx-auto d-flex mt-4 mb-3 align-items-stretch">
+                <div class="col-md-10 flex-fill text-center mx-auto m-1">
+                    <p class="text-important mb-2 mt-1 h1"><#= theEvent.YearCode #> <#= theEvent.Name #></p>
                 </div>
 			</div>
 			<div>
 				<# if (distanceResults.Keys.Count < 1) { #>
-					<div className="container-lg lg-max-width shadow-sm p-5 mb-3 border border-light">
-						<div className="text-center">
+					<div class="container-lg lg-max-width shadow-sm p-5 mb-3 border border-light">
+						<div class="text-center">
 							<h2>No results to display.</h2>
 						</div>
 					</div>
 				<# } else { #>
 					<div>
-						<div className="row container-lg lg-max-width mx-auto d-flex align-items-stretch shadow-sm p-0 mb-3 border border-light">
-							<div className="p-0">
+						<div class="row container-lg lg-max-width mx-auto d-flex align-items-stretch shadow-sm p-0 mb-3 border border-light">
+							<div class="p-0">
 								<# if (distanceResults.Keys.Count > 1) { #>
-									<ul className="nav nav-tabs nav-fill">
+									<ul class="nav nav-tabs nav-fill">
 										<# foreach (string d in distanceResults.Keys ) { #>
-											<li className="nav-item" key="distance-<#= d #>">
-												<a className="nav-link text-important h5 text-secondary" href="#<#= d #>" role="button"><#= d #></a>
+											<li class="nav-item" key="distance-<#= d #>">
+												<a class="nav-link text-important h5 text-secondary" href="#<#= d #>" role="button"><#= d #></a>
 											</li>
 										<# } #>
 									</ul>
 								<# } #>
 								<div id="results-parent">
 									<# foreach (string d in distanceResults.Keys) { #>
-										<div className="table-responsive-sm m-3" key="<#= d #>" id="<#= d #>">
-											<table className="table table-sm">
-												<thead>
-													<# if (distanceResults.Keys.Count > 1) { #>
+										<div class="table-responsive-sm m-3" key="<#= d #>" id="<#= d #>">
+											<table class="table table-sm">
+												<# if (theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME) { #>
+													<thead>
+														<# if (distanceResults.Keys.Count > 1) { #>
+															<tr>
+																<td class="table-distance-header text-important text-center" colSpan="10"><#= d #></td>
+															</tr>
+														<# } #>
 														<tr>
-															<td className="table-distance-header text-important text-center" colSpan="10"><#= d #></td>
+															<th class="overflow-hidden-sm col-md text-center">Bib</th>
+															<th class="col-sm text-center">Place</th>
+															<th class="col-lg">Name</th>
+															<th class="overflow-hidden-lg col-sm text-center">Age</th>
+															<th class="overflow-hidden-lg col-sm text-center">Pl</th>
+															<th class="overflow-hidden-lg col-sm text-center">Gender</th>
+															<th class="overflow-hidden-lg col-sm text-center">Pl</th>
+															<th class="col-lg text-center">Time</th>
+															<th class="col-lg text-center"></th>
 														</tr>
-													<# } #>
-													<tr>
-														<th className="overflow-hidden-sm col-md text-center">Bib</th>
-														<th className="col-sm text-center">Place</th>
-														<th className="col-lg">Name</th>
-														<th className="overflow-hidden-lg col-sm text-center">Age</th>
-														<th className="overflow-hidden-lg col-sm text-center">Pl</th>
-														<th className="overflow-hidden-lg col-sm text-center">Gender</th>
-														<th className="overflow-hidden-lg col-sm text-center">Pl</th>
-														<th className="overflow-hidden-lgcol-lg text-center">Chip Time*</th>
-														<th className="col-lg text-center">Time</th>
-													</tr>
-												</thead>
-												<tbody>
-													<# foreach (TimeResult r in distanceResults[d]) { #>
-														<tr key="<#= r.Bib #>">
-															<td className="overflow-hidden-sm text-center"><#= r.Bib #></td>
-															<td className="text-center"><#= r.Finish ? r.PlaceStr : "" #></td>
-															<td className="text-center"><#= r.PrettyParticipantName #></td>
-															<td className="overflow-hidden-lg text-center"><#= r.Age(theEvent.Date) #></td>
-															<td className="overflow-hidden-lg text-center"><#= r.Finish? r.AgePlaceStr : "" #></td>
-															<td className="overflow-hidden-lg text-center"><#= r.PrettyGender #></td>
-															<td className="overflow-hidden-lg text-center"><#= r.Finish? r.GenderPlaceStr : "" #></td>
-															<td className="overflow-hidden-lg text-center"><#= r.ChipTime.Substring(0, r.ChipTime.Length > 3 ? r.ChipTime.Length -2 : r.ChipTime.Length) #></td>
-															<td className="text-center">
-																<#= r.Finish? r.Time.Substring(0, r.Time.Length > 3 ? r.Time.Length -2 : r.Time.Length) : r.SegmentName #>
-															</td>
+													</thead>
+													<tbody>
+														<# foreach (TimeResult r in distanceResults[d]) { #>
+															<tr key="<#= r.Bib #>">
+																<td class="overflow-hidden-sm text-center"><#= r.Bib #></td>
+																<td class="text-center"><#= r.PrettyPlaceStr #></td>
+																<td><#= r.PrettyParticipantName #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Age(theEvent.Date) #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.AgePlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.PrettyGender #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.GenderPlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Time.Substring(0, r.Time.Length > 3 ? r.Time.Length -2 : r.Time.Length) #></td>
+																<td class="text-center">
+																	<#= (r.SegmentName == "Finish")? string.Format("Lap {0}", r.Occurrence) : r.SegmentName #>
+																</td>
+															</tr>
+														<# } #>
+													</tbody>
+												<# } else { #>
+													<thead>
+														<# if (distanceResults.Keys.Count > 1) { #>
+															<tr>
+																<td class="table-distance-header text-important text-center" colSpan="10"><#= d #></td>
+															</tr>
+														<# } #>
+														<tr>
+															<th class="overflow-hidden-sm col-md text-center">Bib</th>
+															<th class="col-sm text-center">Place</th>
+															<th class="col-lg">Name</th>
+															<th class="overflow-hidden-lg col-sm text-center">Age</th>
+															<th class="overflow-hidden-lg col-sm text-center">Pl</th>
+															<th class="overflow-hidden-lg col-sm text-center">Gender</th>
+															<th class="overflow-hidden-lg col-sm text-center">Pl</th>
+															<th class="overflow-hidden-lg col-lg text-center">Chip Time*</th>
+															<th class="col-lg text-center">Time</th>
 														</tr>
-													<# } #>
-												</tbody>
+													</thead>
+													<tbody>
+														<# foreach (TimeResult r in distanceResults[d]) { #>
+															<tr key="<#= r.Bib #>">
+																<td class="overflow-hidden-sm text-center"><#= r.Bib #></td>
+																<td class="text-center"><#= r.PrettyPlaceStr #></td>
+																<td><#= r.PrettyParticipantName #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Age(theEvent.Date) #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.AgePlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.PrettyGender #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.GenderPlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.ChipTime.Substring(0, r.ChipTime.Length > 3 ? r.ChipTime.Length -2 : r.ChipTime.Length) #></td>
+																<td class="text-center">
+																	<#= r.Finish? r.Time.Substring(0, r.Time.Length > 3 ? r.Time.Length -2 : r.Time.Length) : r.SegmentName #>
+																</td>
+															</tr>
+														<# } #>
+													</tbody>
+												<# } #>
 											</table>
 										</div>
 									<# } #>
 								</div>
 							</div>
 						</div>
-						<div id='disclaimer' className='container-lg lg-max-width shadow-sm text-center p-3 mb-3 border border-light overflow-hidden-lg'>*Results are ranked based upon the Time and not the Chip Time.</div>
+						<# if (theEvent.EventType == Constants.Timing.EVENT_TYPE_DISTANCE) { #>
+							<div id='disclaimer' class='container-lg lg-max-width shadow-sm text-center p-3 mb-3 border border-light overflow-hidden-lg'>*Results are ranked based upon the Time and not the Chip Time.</div>
+						<# } #>
 					</div>
 				<# } #>
 			</div>
 		</div>
-		<script type="text/javascript" src='jquery.js'></script>
-		<script type="text/javascript" src='bootstrap.js'></script>
+		<script type="text/javascript" src='js/jquery.min.js'></script>
+		<script type="text/javascript" src='js/bootstrap.min.js'></script>
 	</body>
 </html>
