--- a/ChronoKeep/UI/UIObjects/DialogBox.xaml
+++ b/ChronoKeep/UI/UIObjects/DialogBox.xaml
@@ -36,6 +36,7 @@
         </ui:TitleBar>
         <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock x:Name="MessageBox" Text="This is some random text for testing purposes." FontSize="16" TextWrapping="Wrap" Margin="15" TextAlignment="Center" VerticalAlignment="Center" />
+            <TextBox x:Name="CopyBox" Text="" FontSize="16" Margin="15,0,15,15" HorizontalAlignment="Stretch" Visibility="Collapsed" TextChanged="CopyBox_TextChanged"/>
         </StackPanel>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
