--- a/ChronoKeep/IO/HtmlTemplates/HtmlResultsTemplate.tt
+++ b/ChronoKeep/IO/HtmlTemplates/HtmlResultsTemplate.tt
@@ -76,9 +76,9 @@
 																	<# } #>
 																</td>
 																<td class="overflow-hidden-lg text-center"><#= r.Age(theEvent.Date) #></td>
-																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.AgePlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish && r.PrettyGender.Length > 0 ? r.AgePlaceStr : "" #></td>
 																<td class="overflow-hidden-lg text-center"><#= r.PrettyGender #></td>
-																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.GenderPlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish && r.PrettyGender.Length > 0  ? r.GenderPlaceStr : "" #></td>
 																<td class="overflow-hidden-lg text-center"><#= r.Time.Substring(0, r.Time.Length > 3 ? r.Time.Length -2 : r.Time.Length) #></td>
 																<td class="text-center"><#= (r.SegmentName == "Finish")? string.Format("Lap {0}", r.Occurrence) : r.SegmentName #></td>
 															</tr>
@@ -118,9 +118,9 @@
 																	<# } #>
 																</td>
 																<td class="overflow-hidden-lg text-center"><#= r.Age(theEvent.Date) #></td>
-																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.AgePlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish && r.PrettyGender.Length > 0 ? r.AgePlaceStr : "" #></td>
 																<td class="overflow-hidden-lg text-center"><#= r.PrettyGender #></td>
-																<td class="overflow-hidden-lg text-center"><#= r.Finish? r.GenderPlaceStr : "" #></td>
+																<td class="overflow-hidden-lg text-center"><#= r.Finish && r.PrettyGender.Length > 0 ? r.GenderPlaceStr : "" #></td>
 																<td class="overflow-hidden-lg text-center"><#= r.ChipTime.Substring(0, r.ChipTime.Length > 3 ? r.ChipTime.Length -2 : r.ChipTime.Length) #></td>
 																<td class="text-center"><#= r.Finish? r.Time.Substring(0, r.Time.Length > 3 ? r.Time.Length -2 : r.Time.Length) : r.SegmentName #></td>
 															</tr>
