--- a/ChronoKeep/UI/Timing/AwardPage.xaml
+++ b/ChronoKeep/UI/Timing/AwardPage.xaml
@@ -14,31 +14,45 @@
             <ListBox Name="DistancesBox" Height="Auto" FontSize="12" SelectionMode="Extended">
                 <ListBoxItem Content="All" IsSelected="True"/>
             </ListBox>
-            <TextBlock Text="Overall" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+            <TextBlock Text="Overall" FontSize="16" HorizontalAlignment="Center" Margin="0,5"/>
             <DockPanel HorizontalAlignment="Left" Margin="0,0,0,5">
-                <CheckBox Content="Print" FontSize="12" Name="overallYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,10,0"/>
-                <TextBox Text="3" Name="overallNumberParticipants" Width="30" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
+                <CheckBox Content="Print" FontSize="12" Name="overallYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,13,0"/>
+                <TextBox Text="3" Name="overallNumberParticipants" Width="40" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
             </DockPanel>
             <CheckBox Content="Exclude winners from Age Group awards." Name="overallExcludeAG" IsChecked="False" Margin="0,0,0,5"/>
             <CheckBox Content="Exclude winners from Custom awards." Name="overallExcludeCustom" IsChecked="False" Margin="0,0,0,5"/>
             <TextBlock Text="Age Groups" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,5"/>
             <DockPanel HorizontalAlignment="Left" Margin="0,0,0,5">
-                <CheckBox Content="Print" FontSize="12" Name="agYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,10,0"/>
-                <TextBox Text="3" Name="agNumberParticipants" Width="30" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
+                <CheckBox Content="Print" FontSize="12" Name="agYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,13,0"/>
+                <TextBox Text="3" Name="agNumberParticipants" Width="40" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
             </DockPanel>
             <CheckBox Content="Exclude winners from Custom awards." Name="agExcludeCustom" IsChecked="False" Margin="0,0,0,5"/>
             <TextBlock Text="Custom" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,5"/>
             <DockPanel HorizontalAlignment="Left" Margin="0,0,0,5">
-                <CheckBox Content="Print" FontSize="12" Name="customYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,10,0"/>
-                <TextBox Text="3" Name="customNumberParticipants" Width="30" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
+                <CheckBox Content="Print" FontSize="12" Name="customYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,13,0"/>
+                <TextBox Text="3" Name="customNumberParticipants" Width="40" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
             </DockPanel>
+            <Grid Width="204" Margin="0,10,0,5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Margin="4" Text="Start Age" TextAlignment="Center"/>
+                <TextBlock Grid.Column="1" Margin="4" Text="End Age" TextAlignment="Center"/>
+            </Grid>
             <ListView Name="customGroupsListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Extended" FontSize="12" Width="204" Margin="0,0,0,5">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Start Age" Width="98" DisplayMemberBinding="{Binding StartAge}"/>
-                        <GridViewColumn Header="End Age" Width="98" DisplayMemberBinding="{Binding EndAge}"/>
-                    </GridView>
-                </ListView.View>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Margin="4" Text="{Binding StartAge}" TextAlignment="Center"/>
+                            <TextBlock Grid.Column="1" Margin="4" Text="{Binding EndAge}" TextAlignment="Center"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
             <DockPanel HorizontalAlignment="Center" Margin="0,0,0,5">
                 <TextBox Width="100" x:Name="startCustom" PreviewTextInput="IsNumber" Margin="0,0,2,0" HorizontalContentAlignment="Center" />
