--- a/ChronoKeep/UI/Timing/AwardPage.xaml
+++ b/ChronoKeep/UI/Timing/AwardPage.xaml
@@ -32,31 +32,36 @@
                 <CheckBox Content="Print" FontSize="12" Name="customYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,13,0"/>
                 <TextBox Text="3" Name="customNumberParticipants" Width="40" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
             </DockPanel>
-            <Grid Width="204" Margin="0,10,0,5">
+            <Grid Margin="0,10,0,5">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Margin="4" Text="Start Age" TextAlignment="Center"/>
                 <TextBlock Grid.Column="1" Margin="4" Text="End Age" TextAlignment="Center"/>
+                <TextBlock Grid.Column="2" Margin="4" Text="Name" TextAlignment="Center"/>
             </Grid>
-            <ListView Name="customGroupsListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Extended" FontSize="12" Width="204" Margin="0,0,0,5">
+            <ListView Name="customGroupsListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Extended" FontSize="12" Margin="0,0,0,5">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Margin="4" Text="{Binding StartAge}" TextAlignment="Center"/>
                             <TextBlock Grid.Column="1" Margin="4" Text="{Binding EndAge}" TextAlignment="Center"/>
+                            <TextBlock Grid.Column="2" Margin="4" Text="{Binding CustomName}" TextAlignment="Center"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
             <DockPanel HorizontalAlignment="Center" Margin="0,0,0,5">
                 <TextBox Width="100" x:Name="startCustom" PreviewTextInput="IsNumber" Margin="0,0,2,0" HorizontalContentAlignment="Center" />
-                <TextBox Width="100" x:Name="endCustom" PreviewTextInput="IsNumber" Margin="2,0,0,0" HorizontalContentAlignment="Center" />
+                <TextBox Width="100" x:Name="endCustom" PreviewTextInput="IsNumber" Margin="2,0" HorizontalContentAlignment="Center" />
+                <TextBox Width="100" x:Name="customNameBox" Margin="2,0,0,0" HorizontalContentAlignment="Center" />
             </DockPanel>
             <DockPanel HorizontalAlignment="Center" Margin="0,0,0,15">
                 <Button Width="100" Name="addCustom" Content="Add" Click="AddCustom_Click" Margin="0,0,2,0" Height="35"/>
