--- a/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
@@ -18,22 +18,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-            <ui:TitleBar.Tray>
-                <ui:NotifyIcon
-                    FocusOnLeftClick="True"
-                    MenuOnRightClick="True">
-                    <ui:NotifyIcon.Menu>
-                        <ContextMenu>
-                            <MenuItem
-                                Header="Home"
-                                Tag="tray_home" 
-                                />
-                        </ContextMenu>
-                    </ui:NotifyIcon.Menu>
-                </ui:NotifyIcon>
-            </ui:TitleBar.Tray>
+        <ui:TitleBar Grid.Row="0">
         </ui:TitleBar>
         <StackPanel VerticalAlignment="Center" Grid.Row="1">
             <TextBlock Text="Switch Participants to" FontSize="14" VerticalAlignment="Center" Width="210"/>
