--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -87,6 +87,10 @@
                     <TextBlock Text="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
                     <ComboBox Name="UploadIntervalBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                 </DockPanel>
+                <DockPanel>
+                    <TextBlock Text="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                    <ComboBox Name="AnnouncerWindowBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                </DockPanel>
             </StackPanel>
             <StackPanel Grid.Column="1">
                 <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
