--- a/ChronoKeep/UI/Timing/SetTimeWindow.xaml
+++ b/ChronoKeep/UI/Timing/SetTimeWindow.xaml
@@ -44,9 +44,9 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Button Name="Check" Content="Get Time" FontSize="14" Grid.Column="0" Click="Check_Click" Margin="10,5,3,5" HorizontalAlignment="Stretch"/>
-                <Button Name="Set" Content="Set Time" FontSize="14" Grid.Column="1" Click="Set_Click" Margin="7,5,7,5" HorizontalAlignment="Stretch"/>
-                <Button Name="Done" Content="Done" FontSize="14" Grid.Column="2" Click="Done_Click" Margin="3,5,10,5" HorizontalAlignment="Stretch"/>
+                <Button Name="Check" Content="Get Time" Height="35" FontSize="14" Grid.Column="0" Click="Check_Click" Margin="10,5,3,5" HorizontalAlignment="Stretch"/>
+                <Button Name="Set" Content="Set Time" Height="35" FontSize="14" Grid.Column="1" Click="Set_Click" Margin="7,5,7,5" HorizontalAlignment="Stretch"/>
+                <Button Name="Done" Content="Done" Height="35" FontSize="14" Grid.Column="2" Click="Done_Click" Margin="3,5,10,5" HorizontalAlignment="Stretch"/>
             </Grid>
         </StackPanel>
     </Grid>
